updating details in p tags

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Web development is totally new to me</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>NC for the last 18 years by way of NJ</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Watching sports, walking my dog "Cooper", going to the movies</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Quaterback for the Carolina Panthers</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Belmont, NC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Make money using my brain not manual labor</p>
     </section>
 
     <footer id="footer">
