--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>Watching sports, walking my dog "Cooper", going to the movies</p>
       <h1>What's your dream job?</h1>
-      <p>Quaterback for the Carolina Panthers</p>
+      <p>Quarterback for the Carolina Panthers</p>
       <h1>Where do you live?</h1>
       <p>Belmont, NC</p>
       <h1>Why do you want to be a web developer?</h1>
